네이티브 폰트 사이즈 dp로 고정

--- a/app/src/main/res/layout/activity_alert.xml
+++ b/app/src/main/res/layout/activity_alert.xml
@@ -50,10 +50,10 @@
             android:layout_marginLeft="59dp"
             android:layout_marginRight="59dp"
             android:layout_marginBottom="44dp"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:textColor="#333333"
             android:letterSpacing="-0.03"
-            android:lineSpacingExtra="5sp"
+            android:lineSpacingExtra="5dp"
             android:gravity="center_horizontal"
             android:text="Push 수신동의 처리를 완료하였습니다. 알림 및 서비스 설정에서 변경가능합니다."/>
 
@@ -69,9 +69,9 @@
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:background="@drawable/shape_rect_fill19"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="#333333"
-                android:lineSpacingExtra="3sp"
+                android:lineSpacingExtra="3dp"
                 android:gravity="center"
                 android:text="취소"/>
             <TextView
@@ -80,10 +80,10 @@
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:background="@drawable/shape_rect_fill28"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:textStyle="bold"
                 android:textColor="#ffffff"
-                android:lineSpacingExtra="2sp"
+                android:lineSpacingExtra="2dp"
                 android:gravity="center"
                 android:text="확인"/>
         </LinearLayout>
@@ -93,10 +93,10 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/shape_rect_fill16"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:textStyle="bold"
             android:textColor="#ffffff"
-            android:lineSpacingExtra="2sp"
+            android:lineSpacingExtra="2dp"
             android:gravity="center"
             android:text="확인" />
 
