--- a/app/src/main/res/layout/activity_escrow_buyer.xml
+++ b/app/src/main/res/layout/activity_escrow_buyer.xml
@@ -29,10 +29,10 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:textStyle="bold"
                 android:textColor="#000826"
-                android:lineSpacingExtra="4sp"
+                android:lineSpacingExtra="4dp"
                 android:gravity="center_horizontal"
                 android:text="에스크로 정보 안내"/>
 
@@ -64,9 +64,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="14.3dp"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textColor="#e8055a"
-            android:lineSpacingExtra="11sp"
+            android:lineSpacingExtra="11dp"
             android:text="입금 정보 확인 후 입금을 진행해주세요."/>
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -85,9 +85,9 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4.8dp"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="#555555"
-                android:lineSpacingExtra="11sp"
+                android:lineSpacingExtra="11dp"
                 android:text="입금 마감일 : "/>
             <TextView
                 android:id="@+id/submitEndDate"
@@ -95,10 +95,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4.8dp"
                 android:layout_marginRight="15dp"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textStyle="bold"
                 android:textColor="#e8055a"
-                android:lineSpacingExtra="11sp"
+                android:lineSpacingExtra="11dp"
                 android:text=""/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -121,9 +121,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="#555555"
-                android:lineSpacingExtra="11sp"
+                android:lineSpacingExtra="11dp"
                 android:text="에스크로 계좌정보"/>
             <TextView
                 android:id="@+id/account"
@@ -131,7 +131,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="16dp"
                 android:layout_alignParentRight="true"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textStyle="bold"
                 android:textColor="#3348ae"
                 android:text=""
@@ -155,17 +155,17 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4.8dp"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="#555555"
-                android:lineSpacingExtra="11sp"
+                android:lineSpacingExtra="11dp"
                 android:text="상세정보"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="#555555"
-                android:lineSpacingExtra="4sp"
+                android:lineSpacingExtra="4dp"
                 android:gravity="end"
                 android:text="단위 : 원"/>
 
@@ -189,9 +189,9 @@
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:textSize="13sp"
+                    android:textSize="13dp"
                     android:textColor="#555555"
-                    android:lineSpacingExtra="27sp"
+                    android:lineSpacingExtra="27dp"
                     android:text="총 입금 금액"/>
                 <TextView
                     android:id="@+id/dealAmount"
@@ -200,10 +200,10 @@
                     android:layout_height="match_parent"
                     android:paddingLeft="10dp"
                     android:gravity="center_vertical|end"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     android:textStyle="bold"
                     android:textColor="#3348ae"
-                    android:lineSpacingExtra="26sp"
+                    android:lineSpacingExtra="26dp"
                     android:text="" />
             </androidx.appcompat.widget.LinearLayoutCompat>
             <View
@@ -218,9 +218,9 @@
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:textSize="13sp"
+                    android:textSize="13dp"
                     android:textColor="#555555"
-                    android:lineSpacingExtra="27sp"
+                    android:lineSpacingExtra="27dp"
                     android:text="거래금액"/>
                 <TextView
                     android:id="@+id/fee"
@@ -229,10 +229,10 @@
                     android:layout_height="match_parent"
                     android:paddingLeft="10dp"
                     android:gravity="center_vertical|end"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     android:textStyle="bold"
                     android:textColor="#333333"
-                    android:lineSpacingExtra="26sp"
+                    android:lineSpacingExtra="26dp"
                     android:text="" />
             </androidx.appcompat.widget.LinearLayoutCompat>
             <View
@@ -248,7 +248,7 @@
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:textSize="13sp"
+                    android:textSize="13dp"
                     android:textColor="#555555"
                     android:text="플랫폼 이용료\n(거래금액 1%)"/>
                 <TextView
@@ -258,10 +258,10 @@
                     android:layout_height="match_parent"
                     android:paddingLeft="10dp"
                     android:gravity="center_vertical|end"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     android:textStyle="bold"
                     android:textColor="#333333"
-                    android:lineSpacingExtra="26sp"
+                    android:lineSpacingExtra="26dp"
                     android:text="" />
             </androidx.appcompat.widget.LinearLayoutCompat>
             <View
@@ -277,7 +277,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:textSize="13sp"
+                    android:textSize="13dp"
                     android:textColor="#555555"
                     android:text="에스크로 서비스 수수료\n(거래금액 0.2%)"/>
                 <TextView
@@ -287,10 +287,10 @@
                     android:layout_height="match_parent"
                     android:paddingLeft="10dp"
                     android:gravity="center_vertical|end"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     android:textStyle="bold"
                     android:textColor="#333333"
-                    android:lineSpacingExtra="26sp"
+                    android:lineSpacingExtra="26dp"
                     android:text="" />
             </androidx.appcompat.widget.LinearLayoutCompat>
             <View
@@ -305,7 +305,7 @@
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:textSize="13sp"
+                    android:textSize="13dp"
                     android:textColor="#555555"
                     android:text="계약서 자동작성\n서비스 수수료"/>
                 <TextView
@@ -315,10 +315,10 @@
                     android:layout_height="match_parent"
                     android:paddingLeft="10dp"
                     android:gravity="center_vertical|end"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     android:textStyle="bold"
                     android:textColor="#333333"
-                    android:lineSpacingExtra="26sp"
+                    android:lineSpacingExtra="26dp"
                     android:text="" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -334,10 +334,10 @@
             android:layout_height="40dp"
             android:layout_marginTop="16.5dp"
             android:background="@drawable/shape_rect_fill16"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:textStyle="bold"
             android:textColor="#ffffff"
-            android:lineSpacingExtra="5sp"
+            android:lineSpacingExtra="5dp"
             android:gravity="center"
             android:text="확인"/>
 
