--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -46,19 +46,19 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="16dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#dfe2ee"
                             android:letterSpacing="-0.03"
-                            android:lineSpacingExtra="5sp"
+                            android:lineSpacingExtra="5dp"
                             android:text="종목명"/>
                         <TextView
                             android:id="@+id/stockName"
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:layout_height="wrap_content"
-                            android:textSize="19sp"
+                            android:textSize="19dp"
                             android:textColor="#ffffff"
-                            android:lineSpacingExtra="1sp"
+                            android:lineSpacingExtra="1dp"
                             android:text="코스콤"
                             android:gravity="center"/>
                         <ImageView
@@ -135,9 +135,13 @@
                             android:layout_height="wrap_content">
                             <com.google.android.material.tabs.TabLayout
                                 android:id="@+id/tabLayout"
-                                android:layout_width="match_parent"
-                                android:minWidth="420dp"
-                                android:layout_height="36dp"
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                app:tabMaxWidth="0dp"
+                                app:tabGravity="center"
+                                app:tabMode="fixed"
+                                app:tabTextAppearance="@style/tab_text"
                                 app:tabTextColor="#FFFFFF"
                                 app:tabSelectedTextColor="#FFFFFF"
                                 app:tabIndicatorColor="#e6e8f4">
