--- a/app/src/main/res/layout/activity_sign_launch.xml
+++ b/app/src/main/res/layout/activity_sign_launch.xml
@@ -36,10 +36,10 @@
                         android:id="@+id/btnFingerRegist"
                         android:layout_width="wrap_content"
                         android:layout_height="49dp"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:textColor="#333333"
                         android:letterSpacing="-0.03"
-                        android:lineSpacingExtra="5sp"
+                        android:lineSpacingExtra="5dp"
                         android:text="바이오인증 등록"
                         android:paddingLeft="10dp"
                         android:gravity="center_vertical"/>
@@ -70,10 +70,10 @@
                         android:id="@+id/btnPinRegist"
                         android:layout_width="wrap_content"
                         android:layout_height="49dp"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:textColor="#333333"
                         android:letterSpacing="-0.03"
-                        android:lineSpacingExtra="5sp"
+                        android:lineSpacingExtra="5dp"
                         android:text="핀코드 등록"
                         android:paddingLeft="10dp"
                         android:gravity="center_vertical"/>
@@ -85,10 +85,10 @@
                         android:id="@+id/btnPinChange"
                         android:layout_width="wrap_content"
                         android:layout_height="49dp"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:textColor="#333333"
                         android:letterSpacing="-0.03"
-                        android:lineSpacingExtra="5sp"
+                        android:lineSpacingExtra="5dp"
                         android:text="핀코드 변경"
                         android:paddingLeft="10dp"
                         android:gravity="center_vertical"/>
@@ -119,10 +119,10 @@
                         android:id="@+id/btnPatternRegist"
                         android:layout_width="wrap_content"
                         android:layout_height="49dp"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:textColor="#333333"
                         android:letterSpacing="-0.03"
-                        android:lineSpacingExtra="5sp"
+                        android:lineSpacingExtra="5dp"
                         android:text="패턴 등록"
                         android:paddingLeft="10dp"
                         android:gravity="center_vertical"/>
@@ -134,10 +134,10 @@
                         android:id="@+id/btnPatternChange"
                         android:layout_width="wrap_content"
                         android:layout_height="49dp"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:textColor="#333333"
                         android:letterSpacing="-0.03"
-                        android:lineSpacingExtra="5sp"
+                        android:lineSpacingExtra="5dp"
                         android:text="패턴 변경"
                         android:paddingLeft="10dp"
                         android:gravity="center_vertical"/>
@@ -179,11 +179,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:textSize="19sp"
+                android:textSize="19dp"
                 android:textStyle="bold"
                 android:textColor="#000826"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="1sp"
+                android:lineSpacingExtra="1dp"
                 android:gravity="center_horizontal"
                 android:text="통합인증 간편로그인 등록 및 변경"/>
             <LinearLayout
