--- a/app/src/main/res/layout/list_item_group_chat_user_me.xml
+++ b/app/src/main/res/layout/list_item_group_chat_user_me.xml
@@ -48,9 +48,9 @@
                     android:paddingTop="8dp"
                     android:paddingLeft="12dp"
                     android:paddingRight="12dp"
-                    android:textSize="13sp"
+                    android:textSize="13dp"
                     android:textColor="#333333"
-                    android:lineSpacingExtra="5sp"
+                    android:lineSpacingExtra="5dp"
                     android:text="Hi, how are you today?"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
                     android:text="(edited)"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     android:textColor="#d8ceff"
                     android:visibility="gone"
                     android:paddingLeft="12dp"
@@ -94,10 +94,10 @@
                         android:paddingRight="12dp"
                         android:maxLines="1"
                         android:ellipsize="end"
-                        android:textSize="12sp"
+                        android:textSize="12dp"
                         android:text="\@Reddit"
                         android:textColor="#333333"
-                        android:lineSpacingExtra="5sp"
+                        android:lineSpacingExtra="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:maxWidth="200dp"
@@ -108,10 +108,10 @@
                         android:paddingRight="12dp"
                         android:maxLines="1"
                         android:ellipsize="end"
-                        android:textSize="16sp"
+                        android:textSize="16dp"
                         android:text="Title will be here."
                         android:textColor="#333333"
-                        android:lineSpacingExtra="5sp"
+                        android:lineSpacingExtra="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:maxWidth="200dp"
@@ -123,9 +123,9 @@
                         android:paddingBottom="4dp"
                         android:maxLines="3"
                         android:ellipsize="end"
-                        android:textSize="13sp"
+                        android:textSize="13dp"
                         android:textColor="#333333"
-                        android:lineSpacingExtra="5sp"
+                        android:lineSpacingExtra="5dp"
                         android:text="Description will be here. Blah Blah WWW Blah Wl Blah W WW WW ABCD EFG WW WW WW W Third Line. WWW Z XCVB QWER"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -148,7 +148,7 @@
         <TextView
             android:id="@+id/text_group_chat_time"
             android:text="21:27"
-            android:textSize="11sp"
+            android:textSize="11dp"
             android:textColor="#666666"
             android:layout_toLeftOf="@id/card_group_chat_message"
             android:layout_alignBottom="@id/card_group_chat_message"
