--- a/app/src/main/res/layout/activity_buy_write.xml
+++ b/app/src/main/res/layout/activity_buy_write.xml
@@ -35,9 +35,9 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         android:layout_marginLeft="16dp"
-                        android:textSize="16sp"
+                        android:textSize="16dp"
                         android:textColor="#000000"
-                        android:lineSpacingExtra="8sp"
+                        android:lineSpacingExtra="8dp"
                         android:textStyle="bold"
                         android:gravity="left|center_vertical"
                         android:text="주문등록" />
@@ -62,10 +62,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="3dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#757575"
                             android:letterSpacing="-0.03"
-                            android:lineSpacingExtra="5sp"
+                            android:lineSpacingExtra="5dp"
                             android:text="종목명"/>
                         <TextView
                             android:id="@+id/stockName"
@@ -73,9 +73,9 @@
                             android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="1dp"
-                            android:textSize="19sp"
+                            android:textSize="19dp"
                             android:textColor="#0e1d64"
-                            android:lineSpacingExtra="1sp"
+                            android:lineSpacingExtra="1dp"
                             android:hint="종목명 입력"
                             android:gravity="center"/>
                         <androidx.appcompat.widget.AppCompatImageView
@@ -100,9 +100,9 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
-                            android:lineSpacingExtra="5sp"
+                            android:lineSpacingExtra="5dp"
                             android:text="구분        "/>
 
                         <androidx.appcompat.widget.LinearLayoutCompat
@@ -118,10 +118,10 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textSize="15sp"
+                                android:textSize="15dp"
                                 android:textStyle="bold"
                                 android:textColor="#e8055a"
-                                android:lineSpacingExtra="3sp"
+                                android:lineSpacingExtra="3dp"
                                 android:text="매수"/>
                             <androidx.appcompat.widget.LinearLayoutCompat
                                 android:id="@+id/limit"
@@ -134,24 +134,24 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:textSize="15sp"
+                                    android:textSize="15dp"
                                     android:textColor="#000000"
-                                    android:lineSpacingExtra="3sp"
+                                    android:lineSpacingExtra="3dp"
                                     android:text="(매수가능 수량 : "/>
                                 <TextView
                                     android:id="@+id/ableCount"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:textSize="15sp"
+                                    android:textSize="15dp"
                                     android:textColor="#000000"
-                                    android:lineSpacingExtra="3sp"
+                                    android:lineSpacingExtra="3dp"
                                     android:hint="0"/>
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:textSize="15sp"
+                                    android:textSize="15dp"
                                     android:textColor="#000000"
-                                    android:lineSpacingExtra="3sp"
+                                    android:lineSpacingExtra="3dp"
                                     android:text="주)"/>
                             </androidx.appcompat.widget.LinearLayoutCompat>
                         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -166,10 +166,10 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:lineSpacingExtra="5sp"
+                            android:lineSpacingExtra="5dp"
                             android:text="수량(주)"
                             android:textColor="#333333"
-                            android:textSize="13sp" />
+                            android:textSize="13dp" />
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
@@ -186,12 +186,12 @@
                                 android:gravity="right|center_vertical"
                                 android:hint="0"
                                 android:inputType="number"
-                                android:lineSpacingExtra="4sp"
+                                android:lineSpacingExtra="4dp"
                                 android:maxLength="10"
                                 android:orientation="horizontal"
                                 android:paddingRight="11dp"
                                 android:textColor="#333333"
-                                android:textSize="20sp"
+                                android:textSize="20dp"
                                 android:textStyle="bold" />
 
                             <androidx.appcompat.widget.AppCompatImageView
@@ -220,10 +220,10 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:lineSpacingExtra="5sp"
+                            android:lineSpacingExtra="5dp"
                             android:text="가격(원)"
                             android:textColor="#333333"
-                            android:textSize="13sp" />
+                            android:textSize="13dp" />
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
@@ -239,12 +239,12 @@
                                 android:gravity="right|center_vertical"
                                 android:hint="0"
                                 android:inputType="number"
-                                android:lineSpacingExtra="4sp"
+                                android:lineSpacingExtra="4dp"
                                 android:maxLength="10"
                                 android:orientation="horizontal"
                                 android:paddingRight="11dp"
                                 android:textColor="#3348ae"
-                                android:textSize="20sp"
+                                android:textSize="20dp"
                                 android:textStyle="bold" />
 
                             <androidx.appcompat.widget.AppCompatImageView
@@ -273,10 +273,10 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:lineSpacingExtra="5sp"
+                            android:lineSpacingExtra="5dp"
                             android:text="금액(원)"
                             android:textColor="#333333"
-                            android:textSize="13sp" />
+                            android:textSize="13dp" />
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
@@ -291,11 +291,11 @@
                                 android:background="@drawable/shape_rect_fill7"
                                 android:gravity="right|center_vertical"
                                 android:hint="0"
-                                android:lineSpacingExtra="4sp"
+                                android:lineSpacingExtra="4dp"
                                 android:orientation="horizontal"
                                 android:paddingRight="11dp"
                                 android:textColor="#3348ae"
-                                android:textSize="17sp" />
+                                android:textSize="17dp" />
 
 
 
@@ -311,9 +311,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
-                            android:lineSpacingExtra="5sp"
+                            android:lineSpacingExtra="5dp"
                             android:text="거래조건"/>
                         <androidx.appcompat.widget.LinearLayoutCompat
                             android:layout_width="wrap_content"
@@ -325,26 +325,26 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textSize="11sp"
+                                android:textSize="11dp"
                                 android:textColor="#757575"
-                                android:lineSpacingExtra="7sp"
+                                android:lineSpacingExtra="7dp"
                                 android:gravity="end"
                                 android:text="("/>
                             <TextView
                                 android:id="@+id/messageLength"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textSize="11sp"
+                                android:textSize="11dp"
                                 android:textColor="#757575"
-                                android:lineSpacingExtra="7sp"
+                                android:lineSpacingExtra="7dp"
                                 android:gravity="end"
                                 android:text="0"/>
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textSize="11sp"
+                                android:textSize="11dp"
                                 android:textColor="#757575"
-                                android:lineSpacingExtra="7sp"
+                                android:lineSpacingExtra="7dp"
                                 android:gravity="end"
                                 android:text="/300byte)"/>
                         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -360,9 +360,9 @@
                         android:paddingRight="11dp"
                         android:paddingTop="9dp"
                         android:paddingBottom="9dp"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:textColor="#333333"
-                        android:lineSpacingExtra="6sp"
+                        android:lineSpacingExtra="6dp"
                         android:gravity="top|left"/>
 
                     <androidx.appcompat.widget.LinearLayoutCompat
@@ -377,9 +377,9 @@
                             android:layout_weight="1"
                             android:layout_height="match_parent"
                             android:background="@drawable/shape_rect_fill22"
-                            android:textSize="15sp"
+                            android:textSize="15dp"
                             android:textColor="#333333"
-                            android:lineSpacingExtra="5sp"
+                            android:lineSpacingExtra="5dp"
                             android:gravity="center"
                             android:text="취소"/>
                         <View
@@ -391,10 +391,10 @@
                             android:layout_weight="1"
                             android:layout_height="match_parent"
                             android:background="@drawable/shape_rect_fill27"
-                            android:textSize="16sp"
+                            android:textSize="16dp"
                             android:textStyle="bold"
                             android:textColor="#ffffff"
-                            android:lineSpacingExtra="4sp"
+                            android:lineSpacingExtra="4dp"
                             android:gravity="center"
                             android:text="등록"/>
                     </androidx.appcompat.widget.LinearLayoutCompat>
