--- a/app/src/main/res/layout/activity_contract_popup.xml
+++ b/app/src/main/res/layout/activity_contract_popup.xml
@@ -27,10 +27,10 @@
                 android:layout_marginLeft="15dp"
                 android:gravity="center_horizontal"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="4sp"
+                android:lineSpacingExtra="4dp"
                 android:text="계약 및 체결정보"
                 android:textColor="#000826"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -76,10 +76,10 @@
                 android:layout_marginLeft="15dp"
                 android:gravity="center_horizontal"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text="종목명"
                 android:textColor="#757575"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -90,10 +90,10 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="2sp"
+                android:lineSpacingExtra="2dp"
                 android:text="코스콤"
                 android:textColor="#0e1d64"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -104,10 +104,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text="보통주"
                 android:textColor="#757575"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"></TextView>
@@ -129,11 +129,11 @@
                 android:background="#f8f8f8"
                 android:gravity="center_vertical"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:paddingLeft="15dp"
                 android:text="양도인"
                 android:textColor="#3348ae"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -153,10 +153,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="114dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text=""
                 android:textColor="#333333"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -178,11 +178,11 @@
                 android:background="#f8f8f8"
                 android:gravity="center_vertical"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:paddingLeft="15dp"
                 android:text="양수인"
                 android:textColor="#e8055a"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -202,10 +202,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="114dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text=""
                 android:textColor="#333333"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -227,11 +227,11 @@
                 android:background="#FFFFFF"
                 android:gravity="center_vertical"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:paddingLeft="15dp"
                 android:text="수량(주)"
                 android:textColor="#555555"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -251,10 +251,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text=""
                 android:textColor="#333333"
-                android:textSize="17sp"
+                android:textSize="17dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -277,11 +277,11 @@
                 android:background="#FFFFFF"
                 android:gravity="center_vertical"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:paddingLeft="15dp"
                 android:text="가격(원)"
                 android:textColor="#555555"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -301,10 +301,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text=""
                 android:textColor="#000000"
-                android:textSize="17sp"
+                android:textSize="17dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -327,11 +327,11 @@
                 android:background="#FFFFFF"
                 android:gravity="center_vertical"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:paddingLeft="15dp"
                 android:text="금액(원)"
                 android:textColor="#555555"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -351,10 +351,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text=""
                 android:textColor="#333333"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -377,11 +377,11 @@
                 android:background="#f8f8f8"
                 android:gravity="center_vertical"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:paddingLeft="15dp"
                 android:text="계약체결일"
                 android:textColor="#555555"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -401,10 +401,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="113dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text=""
                 android:textColor="#333333"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -426,11 +426,11 @@
                 android:background="#f8f8f8"
                 android:gravity="center_vertical"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:paddingLeft="15dp"
                 android:text="상태"
                 android:textColor="#555555"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
