--- a/app/src/main/res/layout/activity_investment.xml
+++ b/app/src/main/res/layout/activity_investment.xml
@@ -46,6 +46,7 @@
                             android:id="@+id/tabLayout"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            app:tabTextAppearance="@style/tab_text"
                             app:tabIndicatorColor="#FFFFFF"
                             app:tabIndicatorFullWidth="false"
                             app:tabSelectedTextColor="#FFFFFF"
