--- a/app/src/main/res/layout/activity_order_list.xml
+++ b/app/src/main/res/layout/activity_order_list.xml
@@ -42,6 +42,7 @@
                         android:layout_height="match_parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
+                        app:tabTextAppearance="@style/tab_text"
                         app:tabIndicatorColor="#FFFFFF"
                         app:tabIndicatorFullWidth="false"
                         app:tabSelectedTextColor="#FFFFFF"
@@ -85,10 +86,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="3dp"
-                                android:textSize="13sp"
+                                android:textSize="13dp"
                                 android:textColor="#757575"
                                 android:letterSpacing="-0.03"
-                                android:lineSpacingExtra="5sp"
+                                android:lineSpacingExtra="5dp"
                                 android:text="종목명"/>
 
                             <TextView
@@ -102,10 +103,10 @@
                                 android:hint="종목명 입력"
                                 android:imeOptions="actionSearch"
                                 android:inputType="text"
-                                android:lineSpacingExtra="1sp"
+                                android:lineSpacingExtra="1dp"
                                 android:maxLines="1"
                                 android:textColor="#0e1d64"
-                                android:textSize="14sp" />
+                                android:textSize="14dp" />
                             <androidx.appcompat.widget.AppCompatImageView
                                 android:id="@+id/btnSearch"
                                 android:layout_width="24dp"
@@ -146,7 +147,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:text="전체"
-                                        android:textSize="14sp"
+                                        android:textSize="14dp"
                                         android:textColor="#333333"
                                         />
 
@@ -172,7 +173,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:text="매도"
-                                        android:textSize="14sp"
+                                        android:textSize="14dp"
                                         android:textColor="#3348ae"
                                         />
 
@@ -198,7 +199,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:text="매수"
-                                        android:textSize="14sp"
+                                        android:textSize="14dp"
                                         android:textColor="#e8055a"
                                         />
 
@@ -240,26 +241,26 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:textSize="13sp"
+                                    android:textSize="13dp"
                                     android:textColor="#555555"
-                                    android:lineSpacingExtra="5sp"
+                                    android:lineSpacingExtra="5dp"
                                     android:text="총"/>
                                 <TextView
                                     android:id="@+id/count"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginLeft="6dp"
-                                    android:textSize="14sp"
+                                    android:textSize="14dp"
                                     android:textColor="#3348ae"
-                                    android:lineSpacingExtra="4sp"
+                                    android:lineSpacingExtra="4dp"
                                     android:text="50"/>
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginLeft="1dp"
-                                    android:textSize="13sp"
+                                    android:textSize="13dp"
                                     android:textColor="#555555"
-                                    android:lineSpacingExtra="5sp"
+                                    android:lineSpacingExtra="5dp"
                                     android:text="건" />
                             </LinearLayout>
 
@@ -282,9 +283,9 @@
                                     android:id="@+id/btnOrder"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:textSize="15sp"
+                                    android:textSize="15dp"
                                     android:textColor="#ffffff"
-                                    android:lineSpacingExtra="5sp"
+                                    android:lineSpacingExtra="5dp"
                                     android:gravity="center_horizontal"
                                     android:text="주문등록"
                                     />
@@ -306,36 +307,36 @@
                                 android:layout_width="0dp"
                                 android:layout_weight="2"
                                 android:layout_height="wrap_content"
-                                android:textSize="13sp"
+                                android:textSize="13dp"
                                 android:textColor="#555555"
-                                android:lineSpacingExtra="5sp"
+                                android:lineSpacingExtra="5dp"
                                 android:text="종목명"
                                 android:gravity="center"/>
                             <TextView
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:layout_height="wrap_content"
-                                android:textSize="13sp"
+                                android:textSize="13dp"
                                 android:textColor="#555555"
-                                android:lineSpacingExtra="5sp"
+                                android:lineSpacingExtra="5dp"
                                 android:text="수량(주)"
                                 android:gravity="center"/>
                             <TextView
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:layout_height="wrap_content"
-                                android:textSize="13sp"
+                                android:textSize="13dp"
                                 android:textColor="#555555"
-                                android:lineSpacingExtra="5sp"
+                                android:lineSpacingExtra="5dp"
                                 android:text="가격(원)"
                                 android:gravity="center"/>
                             <TextView
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:layout_height="wrap_content"
-                                android:textSize="13sp"
+                                android:textSize="13dp"
                                 android:textColor="#555555"
-                                android:lineSpacingExtra="5sp"
+                                android:lineSpacingExtra="5dp"
                                 android:text="주문상태"
                                 android:gravity="center"/>
                         </LinearLayout>
@@ -371,10 +372,10 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="9dp"
-                                    android:textSize="14sp"
+                                    android:textSize="14dp"
                                     android:textColor="#555555"
                                     android:letterSpacing="-0.03"
-                                    android:lineSpacingExtra="4sp"
+                                    android:lineSpacingExtra="4dp"
                                     android:gravity="center_horizontal"
                                     android:text="조회된 내용이 없습니다"/>
                             </androidx.appcompat.widget.LinearLayoutCompat>
