--- a/app/src/main/res/layout/activity_order_popup.xml
+++ b/app/src/main/res/layout/activity_order_popup.xml
@@ -26,10 +26,10 @@
                 android:layout_marginLeft="15dp"
                 android:gravity="center_horizontal"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="4sp"
+                android:lineSpacingExtra="4dp"
                 android:text="주문정보"
                 android:textColor="#000826"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -67,10 +67,10 @@
                 android:layout_marginLeft="15dp"
                 android:gravity="center_horizontal"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text="종목명"
                 android:textColor="#757575"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -83,11 +83,11 @@
                 android:ems="5"
                 android:gravity="center"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="2sp"
+                android:lineSpacingExtra="2dp"
                 android:maxLines="1"
                 android:text="코스콤"
                 android:textColor="#0e1d64"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -99,10 +99,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text="보통주"
                 android:textColor="#757575"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -123,10 +123,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text="구분"
                 android:textColor="#555555"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -146,10 +146,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="114dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text=""
                 android:textColor="#3348ae"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -171,10 +171,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text="수량(주)"
                 android:textColor="#555555"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -194,10 +194,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text=""
                 android:textColor="#3348ae"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -219,10 +219,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text="가격(원)"
                 android:textColor="#555555"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -242,10 +242,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text=""
                 android:textColor="#3348ae"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -268,11 +268,11 @@
                 android:background="#f8f8f8"
                 android:gravity="center_vertical"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:paddingLeft="15dp"
                 android:text="잔량(주)"
                 android:textColor="#555555"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -292,10 +292,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text=""
                 android:textColor="#333333"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -317,11 +317,11 @@
                 android:background="#f8f8f8"
                 android:gravity="center_vertical"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:paddingLeft="15dp"
                 android:text="직전체결가(원)"
                 android:textColor="#555555"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -341,10 +341,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text=""
                 android:textColor="#333333"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -366,11 +366,11 @@
                 android:background="#f8f8f8"
                 android:gravity="center_vertical"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:paddingLeft="15dp"
                 android:text="주문상태"
                 android:textColor="#555555"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -418,11 +418,11 @@
                 android:background="#f8f8f8"
                 android:gravity="center_vertical"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:paddingLeft="15dp"
                 android:text="등록자"
                 android:textColor="#555555"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -442,10 +442,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="113dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text=""
                 android:textColor="#333333"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -467,11 +467,11 @@
                 android:background="#f8f8f8"
                 android:gravity="center_vertical"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:paddingLeft="15dp"
                 android:text="등록일시"
                 android:textColor="#555555"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -491,10 +491,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="113dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text=""
                 android:textColor="#333333"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -518,10 +518,10 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text="거래조건"
                 android:textColor="#555555"
-                android:textSize="13sp" />
+                android:textSize="13dp" />
 
             <TextView
                 android:id="@+id/message"
@@ -532,12 +532,12 @@
                 android:layout_marginRight="15dp"
                 android:background="@drawable/shape_rect_fill25"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="4sp"
+                android:lineSpacingExtra="4dp"
                 android:minHeight="55dp"
                 android:padding="8dp"
                 android:text=""
                 android:textColor="#333333"
-                android:textSize="14sp" />
+                android:textSize="14dp" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -559,10 +559,10 @@
                 android:layout_marginLeft="7dp"
                 android:gravity="center_horizontal"
                 android:letterSpacing="-0.05"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text="협상요청"
                 android:textColor="#ffffff"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:textStyle="bold" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
