--- a/app/src/main/res/layout/activity_order_write.xml
+++ b/app/src/main/res/layout/activity_order_write.xml
@@ -38,10 +38,10 @@
                             android:layout_height="match_parent"
                             android:layout_marginLeft="16dp"
                             android:gravity="left|center_vertical"
-                            android:lineSpacingExtra="8sp"
+                            android:lineSpacingExtra="8dp"
                             android:text="주문등록"
                             android:textColor="#000000"
-                            android:textSize="16sp"
+                            android:textSize="16dp"
                             android:textStyle="bold"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -69,10 +69,10 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="3dp"
                                 android:letterSpacing="-0.03"
-                                android:lineSpacingExtra="5sp"
+                                android:lineSpacingExtra="5dp"
                                 android:text="종목명"
                                 android:textColor="#757575"
-                                android:textSize="13sp" />
+                                android:textSize="13dp" />
 
                             <TextView
                                 android:id="@+id/stockName"
@@ -82,9 +82,9 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:hint="종목명 입력"
-                                android:lineSpacingExtra="1sp"
+                                android:lineSpacingExtra="1dp"
                                 android:textColor="#0e1d64"
-                                android:textSize="19sp" />
+                                android:textSize="19dp" />
 
                             <androidx.appcompat.widget.AppCompatImageView
                                 android:id="@+id/btnSearch"
@@ -109,10 +109,10 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:lineSpacingExtra="5sp"
+                                android:lineSpacingExtra="5dp"
                                 android:text="구분        "
                                 android:textColor="#333333"
-                                android:textSize="13sp" />
+                                android:textSize="13dp" />
 
                             <RelativeLayout
                                 android:id="@+id/btnGubn"
@@ -129,10 +129,10 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="11dp"
-                                    android:lineSpacingExtra="3sp"
+                                    android:lineSpacingExtra="3dp"
                                     android:text="매도"
                                     android:textColor="#3348ae"
-                                    android:textSize="15sp"
+                                    android:textSize="15dp"
                                     android:textStyle="bold" />
 
 
@@ -141,10 +141,10 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_below="@+id/tv_re_title"
-                                    android:lineSpacingExtra="3sp"
+                                    android:lineSpacingExtra="3dp"
                                     android:text="(매도가능 수량 : "
                                     android:textColor="#000000"
-                                    android:textSize="15sp" />
+                                    android:textSize="15dp" />
 
                                 <TextView
                                     android:id="@+id/ableCount"
@@ -154,7 +154,7 @@
                                     android:layout_toRightOf="@id/tv_re_sub_title"
                                     android:hint="0"
                                     android:textColor="#000000"
-                                    android:textSize="15sp"
+                                    android:textSize="15dp"
                                     android:textStyle="bold" />
 
                                 <TextView
@@ -163,10 +163,10 @@
                                     android:layout_height="wrap_content"
                                     android:layout_below="@id/tv_re_title"
                                     android:layout_toRightOf="@id/ableCount"
-                                    android:lineSpacingExtra="3sp"
+                                    android:lineSpacingExtra="3dp"
                                     android:text="주)"
                                     android:textColor="#000000"
-                                    android:textSize="15sp" />
+                                    android:textSize="15dp" />
 
                                 <androidx.appcompat.widget.AppCompatImageView
                                     android:id="@+id/iv_popup"
@@ -191,10 +191,10 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:lineSpacingExtra="5sp"
+                                android:lineSpacingExtra="5dp"
                                 android:text="수량(주)"
                                 android:textColor="#333333"
-                                android:textSize="13sp" />
+                                android:textSize="13dp" />
 
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:layout_width="match_parent"
@@ -211,12 +211,12 @@
                                     android:gravity="right|center_vertical"
                                     android:hint="0"
                                     android:inputType="number"
-                                    android:lineSpacingExtra="4sp"
+                                    android:lineSpacingExtra="4dp"
                                     android:maxLength="10"
                                     android:orientation="horizontal"
                                     android:paddingRight="11dp"
                                     android:textColor="#333333"
-                                    android:textSize="20sp"
+                                    android:textSize="20dp"
                                     android:textStyle="bold" />
 
                                 <androidx.appcompat.widget.AppCompatImageView
@@ -245,10 +245,10 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:lineSpacingExtra="5sp"
+                                android:lineSpacingExtra="5dp"
                                 android:text="가격(원)"
                                 android:textColor="#333333"
-                                android:textSize="13sp" />
+                                android:textSize="13dp" />
 
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:layout_width="match_parent"
@@ -264,12 +264,12 @@
                                     android:gravity="right|center_vertical"
                                     android:hint="0"
                                     android:inputType="number"
-                                    android:lineSpacingExtra="4sp"
+                                    android:lineSpacingExtra="4dp"
                                     android:maxLength="10"
                                     android:orientation="horizontal"
                                     android:paddingRight="11dp"
                                     android:textColor="#3348ae"
-                                    android:textSize="20sp"
+                                    android:textSize="20dp"
                                     android:textStyle="bold" />
 
                                 <androidx.appcompat.widget.AppCompatImageView
@@ -298,10 +298,10 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:lineSpacingExtra="5sp"
+                                android:lineSpacingExtra="5dp"
                                 android:text="금액(원)"
                                 android:textColor="#333333"
-                                android:textSize="13sp" />
+                                android:textSize="13dp" />
 
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:layout_width="match_parent"
@@ -316,11 +316,11 @@
                                     android:background="@drawable/shape_rect_fill7"
                                     android:gravity="right|center_vertical"
                                     android:hint="0"
-                                    android:lineSpacingExtra="4sp"
+                                    android:lineSpacingExtra="4dp"
                                     android:orientation="horizontal"
                                     android:paddingRight="11dp"
                                     android:textColor="#3348ae"
-                                    android:textSize="17sp" />
+                                    android:textSize="17dp" />
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -335,10 +335,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentLeft="true"
-                                android:lineSpacingExtra="5sp"
+                                android:lineSpacingExtra="5dp"
                                 android:text="거래조건"
                                 android:textColor="#333333"
-                                android:textSize="13sp" />
+                                android:textSize="13dp" />
 
                             <androidx.appcompat.widget.LinearLayoutCompat
                                 android:layout_width="wrap_content"
@@ -352,29 +352,29 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:gravity="end"
-                                    android:lineSpacingExtra="7sp"
+                                    android:lineSpacingExtra="7dp"
                                     android:text="("
                                     android:textColor="#757575"
-                                    android:textSize="11sp" />
+                                    android:textSize="11dp" />
 
                                 <TextView
                                     android:id="@+id/messageLength"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:gravity="end"
-                                    android:lineSpacingExtra="7sp"
+                                    android:lineSpacingExtra="7dp"
                                     android:text="0"
                                     android:textColor="#757575"
-                                    android:textSize="11sp" />
+                                    android:textSize="11dp" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:gravity="end"
-                                    android:lineSpacingExtra="7sp"
+                                    android:lineSpacingExtra="7dp"
                                     android:text="/300byte)"
                                     android:textColor="#757575"
-                                    android:textSize="11sp" />
+                                    android:textSize="11dp" />
                             </androidx.appcompat.widget.LinearLayoutCompat>
                         </RelativeLayout>
 
@@ -385,13 +385,13 @@
                             android:layout_marginTop="5dp"
                             android:background="@drawable/shape_rect_fill7"
                             android:gravity="top|left"
-                            android:lineSpacingExtra="6sp"
+                            android:lineSpacingExtra="6dp"
                             android:paddingLeft="11dp"
                             android:paddingTop="9dp"
                             android:paddingRight="11dp"
                             android:paddingBottom="9dp"
                             android:textColor="#333333"
-                            android:textSize="14sp" />
+                            android:textSize="14dp" />
 
                         <androidx.appcompat.widget.LinearLayoutCompat
                             android:layout_width="match_parent"
@@ -407,10 +407,10 @@
                                 android:layout_weight="1"
                                 android:background="@drawable/shape_rect_fill22"
                                 android:gravity="center"
-                                android:lineSpacingExtra="5sp"
+                                android:lineSpacingExtra="5dp"
                                 android:text="취소"
                                 android:textColor="#333333"
-                                android:textSize="15sp" />
+                                android:textSize="15dp" />
 
                             <View
                                 android:layout_width="6dp"
@@ -423,10 +423,10 @@
                                 android:layout_weight="1"
                                 android:background="@drawable/shape_rect_fill5"
                                 android:gravity="center"
-                                android:lineSpacingExtra="4sp"
+                                android:lineSpacingExtra="4dp"
                                 android:text="등록"
                                 android:textColor="#ffffff"
-                                android:textSize="16sp"
+                                android:textSize="16dp"
                                 android:textStyle="bold" />
                         </androidx.appcompat.widget.LinearLayoutCompat>
                     </androidx.appcompat.widget.LinearLayoutCompat>
@@ -479,7 +479,7 @@
                         android:layout_marginEnd="20dp"
                         android:layout_marginBottom="31dp"
                         android:letterSpacing="-0.02"
-                        android:lineSpacingExtra="6sp"
+                        android:lineSpacingExtra="6dp"
                         android:text="매도가능 수량은 플랫폼 내 등록기업
 이 등록한 주주명부를 기반으로 체크
 되어 노출되어 집니다.
@@ -491,7 +491,7 @@
 지하여야 할 의무가 매도자에게 있음
 을 알려드립니다."
                         android:textColor="#333333"
-                        android:textSize="14sp" />
+                        android:textSize="14dp" />
                 </FrameLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
