--- a/app/src/main/res/layout/activity_progress.xml
+++ b/app/src/main/res/layout/activity_progress.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
-            android:textSize="17sp"
+            android:textSize="17dp"
             android:textStyle="bold"
             android:textColor="#333333"
             android:letterSpacing="-0.03"
@@ -48,10 +48,10 @@
                 android:layout_height="wrap_content"
                 android:maxLines="2"
                 android:layout_marginLeft="15dp"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:textColor="#a0a0a0"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text="Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의 Push 수신동의"/>
         </LinearLayout>
 
