--- a/app/src/main/res/layout/activity_search2.xml
+++ b/app/src/main/res/layout/activity_search2.xml
@@ -21,6 +21,7 @@
                 android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:tabTextAppearance="@style/tab_text"
                 app:tabIndicatorColor="#000000"
                 app:tabSelectedTextColor="#000000">
                 <com.google.android.material.tabs.TabItem
@@ -49,9 +50,9 @@
                     android:paddingRight="35dp"
                     android:hint="종목명 입력"
                     android:gravity="center_vertical"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     android:textColor="#757575"
-                    android:lineSpacingExtra="4sp"
+                    android:lineSpacingExtra="4dp"
                     android:maxLines="1"
                     android:inputType="text"
                     android:imeOptions="actionSearch"/>
@@ -101,9 +102,9 @@
                     android:background="#f8f8f8"
                     android:paddingLeft="16dp"
                     android:text="최근검색"
-                    android:textSize="13sp"
+                    android:textSize="13dp"
                     android:textColor="#555555"
-                    android:lineSpacingExtra="5sp"
+                    android:lineSpacingExtra="5dp"
                     android:gravity="center_vertical"/>
                 <View
                     android:layout_width="match_parent"
@@ -157,10 +158,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="9dp"
-                            android:textSize="14sp"
+                            android:textSize="14dp"
                             android:textColor="#555555"
                             android:letterSpacing="-0.03"
-                            android:lineSpacingExtra="4sp"
+                            android:lineSpacingExtra="4dp"
                             android:gravity="center_horizontal"
                             android:text="조회된 내용이 없습니다"/>
                     </androidx.appcompat.widget.LinearLayoutCompat>
@@ -198,10 +199,10 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textSize="17sp"
+                android:textSize="17dp"
                 android:textStyle="bold"
                 android:textColor="#ffffff"
-                android:lineSpacingExtra="3sp"
+                android:lineSpacingExtra="3dp"
                 android:gravity="center_horizontal"
                 android:text="종목검색"/>
             <LinearLayout
