--- a/app/src/main/res/layout/fragment_navigation.xml
+++ b/app/src/main/res/layout/fragment_navigation.xml
@@ -34,7 +34,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:text="전체메뉴"
-                    android:textSize="17sp"
+                    android:textSize="17dp"
                     android:textColor="#ffffff"/>
 
                 <androidx.appcompat.widget.AppCompatImageView
@@ -64,9 +64,9 @@
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
-                    android:textSize="13sp"
+                    android:textSize="13dp"
                     android:textColor="#ffffff"
-                    android:lineSpacingExtra="5sp"
+                    android:lineSpacingExtra="5dp"
                     android:text="매수닉(김희응)님"/>
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/btnExit"
@@ -100,9 +100,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="7dp"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:textColor="#333333"
-                        android:lineSpacingExtra="4sp"
+                        android:lineSpacingExtra="4dp"
                         android:text="홈"/>
                 </LinearLayout>
                 <View
@@ -129,9 +129,9 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="7dp"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:textColor="#333333"
-                        android:lineSpacingExtra="4sp"
+                        android:lineSpacingExtra="4dp"
                         android:text="비상장주식거래"/>
                     <ImageView
                         android:tag="more"
@@ -163,14 +163,14 @@
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
                             android:text="주문현황"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"/>
                         <TextView
                             android:id="@+id/btnTrading2"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="계약 및 체결현황"/>
@@ -178,7 +178,7 @@
                             android:id="@+id/btnTrading3"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="전종목 거래현황"/>
@@ -208,9 +208,9 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="7dp"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:textColor="#333333"
-                        android:lineSpacingExtra="4sp"
+                        android:lineSpacingExtra="4dp"
                         android:text="투자정보"/>
                     <ImageView
                         android:tag="more"
@@ -241,7 +241,7 @@
                             android:id="@+id/btnInvestment1"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="기업정보"/>
@@ -249,7 +249,7 @@
                             android:id="@+id/btnInvestment2"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="기업알림 및 홍보자료"/>
@@ -278,9 +278,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="7dp"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:textColor="#333333"
-                        android:lineSpacingExtra="4sp"
+                        android:lineSpacingExtra="4dp"
                         android:text="협상채팅"/>
                 </LinearLayout>
                 <View
@@ -307,9 +307,9 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="7dp"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:textColor="#333333"
-                        android:lineSpacingExtra="4sp"
+                        android:lineSpacingExtra="4dp"
                         android:text="마이페이지"/>
                     <ImageView
                         android:tag="more"
@@ -340,7 +340,7 @@
                             android:id="@+id/btnAlarmList"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="알림수신함"/>
@@ -348,7 +348,7 @@
                             android:id="@+id/btnRegist"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="가입정보관리"/>
@@ -356,7 +356,7 @@
                             android:id="@+id/btnOrder"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="거래정보관리"/>
@@ -364,7 +364,7 @@
                             android:id="@+id/btnFavorite"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="관심기업관리"/>
@@ -372,7 +372,7 @@
                             android:id="@+id/btnFile"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="증빙서류관리"/>
@@ -380,7 +380,7 @@
                             android:id="@+id/btnQna"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="1:1 문의"/>
@@ -388,7 +388,7 @@
                             android:id="@+id/btnOut"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="서비스해지"/>
@@ -418,9 +418,9 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="7dp"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:textColor="#333333"
-                        android:lineSpacingExtra="4sp"
+                        android:lineSpacingExtra="4dp"
                         android:text="서비스소개"/>
                 </LinearLayout>
                 <View
@@ -445,35 +445,35 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="이용안내"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="등록기업 서비스 가이드"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="투자자 서비스 가이드"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="보안모듈설치"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="인증방법안내"/>
@@ -503,9 +503,9 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="7dp"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:textColor="#333333"
-                        android:lineSpacingExtra="4sp"
+                        android:lineSpacingExtra="4dp"
                         android:text="고객센터"/>
                     <ImageView
                         android:tag="more"
@@ -536,7 +536,7 @@
                             android:id="@+id/btnNotice"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="공지사항"/>
@@ -544,7 +544,7 @@
                             android:id="@+id/btnFaq"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="FAQ"/>
@@ -574,9 +574,9 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="7dp"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:textColor="#333333"
-                        android:lineSpacingExtra="4sp"
+                        android:lineSpacingExtra="4dp"
                         android:text="알림 및 서비스설정"/>
                     <ImageView
                         android:tag="more"
@@ -607,7 +607,7 @@
                             android:id="@+id/btnAlarm"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="알림설정"/>
@@ -615,7 +615,7 @@
                             android:id="@+id/btnAgree"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="마케팅수신동의"/>
@@ -623,7 +623,7 @@
                             android:id="@+id/btnVersion"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="버젼정보"/>
@@ -631,7 +631,7 @@
                             android:id="@+id/btnUseAgreement"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="서비스 이용약관"/>
@@ -639,7 +639,7 @@
                             android:id="@+id/btnInfoAgreement"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="개인정보취급처리방침"/>
@@ -647,7 +647,7 @@
                             android:id="@+id/btnRightAgreement"
                             android:layout_width="match_parent"
                             android:layout_height="33dp"
-                            android:textSize="13sp"
+                            android:textSize="13dp"
                             android:textColor="#333333"
                             android:gravity="center_vertical"
                             android:text="저작권보호방침"/>
