--- a/app/src/main/res/layout/fragment_setting_chat.xml
+++ b/app/src/main/res/layout/fragment_setting_chat.xml
@@ -23,9 +23,9 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:textSize="17sp"
+            android:textSize="17dp"
             android:textColor="#000826"
-            android:lineSpacingExtra="3sp"
+            android:lineSpacingExtra="3dp"
             android:text="채팅방 설정"/>
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/btnHide"
@@ -46,9 +46,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textColor="#333333"
-            android:lineSpacingExtra="4sp"
+            android:lineSpacingExtra="4dp"
             android:text="협상 상대"/>
     </LinearLayout>
     <View
@@ -69,9 +69,9 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:textSize="13sp"
+            android:textSize="13dp"
             android:textColor="#333333"
-            android:lineSpacingExtra="5sp"
+            android:lineSpacingExtra="5dp"
             android:text="주문게시자"/>
         <TextView
             android:id="@+id/mygubn"
@@ -84,9 +84,9 @@
             android:paddingBottom="1dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="13sp"
+            android:textSize="13dp"
             android:textColor="#e8055a"
-            android:lineSpacingExtra="5sp"
+            android:lineSpacingExtra="5dp"
             android:text="매수"/>
         <TextView
             android:layout_width="wrap_content"
@@ -95,9 +95,9 @@
             app:layout_constraintTop_toBottomOf="@id/mygubn"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="13sp"
+            android:textSize="13dp"
             android:textColor="#666666"
-            android:lineSpacingExtra="5sp"
+            android:lineSpacingExtra="5dp"
             android:text="나"/>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -117,9 +117,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 android:textColor="#3348ae"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text="매수닉(김희응)"/>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -142,9 +142,9 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:textSize="13sp"
+            android:textSize="13dp"
             android:textColor="#333333"
-            android:lineSpacingExtra="5sp"
+            android:lineSpacingExtra="5dp"
             android:text="협상상대자"/>
         <TextView
             android:id="@+id/hisGubn"
@@ -157,9 +157,9 @@
             android:paddingBottom="1dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="13sp"
+            android:textSize="13dp"
             android:textColor="#3348ae"
-            android:lineSpacingExtra="5sp"
+            android:lineSpacingExtra="5dp"
             android:text="매도"/>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -179,9 +179,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 android:textColor="#3348ae"
-                android:lineSpacingExtra="5sp"
+                android:lineSpacingExtra="5dp"
                 android:text="매도닉(조정석)"/>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -211,9 +211,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
-            android:textSize="13sp"
+            android:textSize="13dp"
             android:textColor="#666666"
-            android:lineSpacingExtra="5sp"
+            android:lineSpacingExtra="5dp"
             android:text="@string/chat_warning"/>
     </LinearLayout>
 
@@ -231,9 +231,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textColor="#555555"
-            android:lineSpacingExtra="4sp"
+            android:lineSpacingExtra="4dp"
             android:text="채팅방 나가기"/>
         <ImageView
             android:layout_width="24dp"
