--- a/app/src/main/res/layout/list_item_group_channel.xml
+++ b/app/src/main/res/layout/list_item_group_channel.xml
@@ -26,7 +26,7 @@
 
         <TextView
             android:id="@+id/text_group_channel_list_topic"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#000000"
             android:maxWidth="160dp"
             android:layout_height="wrap_content"
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:minWidth="16dp"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:background="@drawable/group_channel_list_member_background"
@@ -72,7 +72,7 @@
             android:layout_width="223dp"
             android:layout_height="32dp"
             android:layout_marginTop="2dp"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textColor="#8e8e8e"
             android:ellipsize="end"
             android:maxLines="2"
@@ -84,7 +84,7 @@
         android:id="@+id/text_group_channel_list_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="11.5sp"
+        android:textSize="11.5dp"
         android:layout_marginTop="3dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
