--- a/app/src/main/res/layout/list_item_group_chat_admin.xml
+++ b/app/src/main/res/layout/list_item_group_chat_admin.xml
@@ -32,9 +32,9 @@
             android:id="@+id/text_group_chat_sender_nicname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textColor="#3348ae"
-            android:lineSpacingExtra="6sp"
+            android:lineSpacingExtra="6dp"
             android:text="매도닉(조정석)"
             android:visibility="gone"/>
 
@@ -43,9 +43,9 @@
             android:id="@+id/text_group_chat_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textColor="#3348ae"
-            android:lineSpacingExtra="6sp"/>
+            android:lineSpacingExtra="6dp"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 </LinearLayout>
