--- a/app/src/main/res/layout/list_item_search_list.xml
+++ b/app/src/main/res/layout/list_item_search_list.xml
@@ -21,9 +21,9 @@
             android:layout_weight="0.5"
             android:layout_height="wrap_content"
             android:text="123456"
-            android:textSize="13sp"
+            android:textSize="13dp"
             android:textColor="#333333"
-            android:lineSpacingExtra="4sp"
+            android:lineSpacingExtra="4dp"
             android:gravity="center"/>
         <TextView
             android:id="@+id/name"
@@ -32,9 +32,9 @@
             android:layout_height="wrap_content"
             android:paddingLeft="30dp"
             android:text="아가방컴퍼니"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:textColor="#0e1d64"
-            android:lineSpacingExtra="3sp"
+            android:lineSpacingExtra="3dp"
             android:gravity="center_vertical"/>
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="0dp"
