--- a/app/src/main/res/layout/page_mycontract.xml
+++ b/app/src/main/res/layout/page_mycontract.xml
@@ -22,11 +22,11 @@
             android:id="@+id/stockName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textStyle="bold"
             android:textColor="#132475"
             android:letterSpacing="-0.03"
-            android:lineSpacingExtra="2sp"
+            android:lineSpacingExtra="2dp"
             android:gravity="center_horizontal"
             android:text="코스콤"/>
 
@@ -34,9 +34,9 @@
             android:id="@+id/stockGubn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="13sp"
+            android:textSize="13dp"
             android:textColor="#555555"
-            android:lineSpacingExtra="7sp"
+            android:lineSpacingExtra="7dp"
             android:gravity="center_horizontal"
             android:text="3우선주(전환상황)"/>
         <LinearLayout
@@ -55,18 +55,18 @@
                     android:id="@+id/count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="17sp"
+                    android:textSize="17dp"
                     android:textStyle="bold"
                     android:textColor="#333333"
-                    android:lineSpacingExtra="17sp"
+                    android:lineSpacingExtra="17dp"
                     android:gravity="end"
                     android:text="15,000"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     android:textColor="#333333"
-                    android:lineSpacingExtra="20sp"
+                    android:lineSpacingExtra="20dp"
                     android:gravity="end"
                     android:text="주"/>
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -80,18 +80,18 @@
                     android:id="@+id/price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="17sp"
+                    android:textSize="17dp"
                     android:textStyle="bold"
                     android:textColor="#000000"
-                    android:lineSpacingExtra="17sp"
+                    android:lineSpacingExtra="17dp"
                     android:gravity="end"
                     android:text="4,500"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     android:textColor="#000000"
-                    android:lineSpacingExtra="20sp"
+                    android:lineSpacingExtra="20dp"
                     android:gravity="end"
                     android:text="원"/>
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -100,9 +100,9 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="#333333"
-                android:lineSpacingExtra="20sp"
+                android:lineSpacingExtra="20dp"
                 android:gravity="center"
                 android:text="김*표"/>
         </LinearLayout>
@@ -130,10 +130,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:textColor="#4747c3"
                 android:letterSpacing="-0.03"
-                android:lineSpacingExtra="2sp"
+                android:lineSpacingExtra="2dp"
                 android:gravity="center_horizontal"
                 android:text="체결"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
