--- a/app/src/main/res/layout/page_tutorial1.xml
+++ b/app/src/main/res/layout/page_tutorial1.xml
@@ -12,9 +12,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:textColor="#ffffff"
-        android:lineSpacingExtra="3sp"
+        android:lineSpacingExtra="3dp"
         android:gravity="center_horizontal"
         android:text="쉽고 빠른 UNICORN 비상장주식거래"/>
 
@@ -28,18 +28,18 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textColor="#4bada0"
-            android:lineSpacingExtra="6sp"
+            android:lineSpacingExtra="6dp"
             android:gravity="center_horizontal"
             android:text="01"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:textColor="#ffffff"
-            android:lineSpacingExtra="5sp"
+            android:lineSpacingExtra="5dp"
             android:gravity="center_horizontal"
             android:text="시작하기"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
@@ -48,10 +48,10 @@
         android:layout_width="204dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:textSize="13sp"
+        android:textSize="13dp"
         android:textColor="#ffffff"
         android:letterSpacing="-0.03"
-        android:lineSpacingExtra="5sp"
+        android:lineSpacingExtra="5dp"
         android:gravity="center_horizontal"
         android:text="@string/tutorian_desc1" />
 
