--- a/app/src/main/res/layout/partial_group_chat_info.xml
+++ b/app/src/main/res/layout/partial_group_chat_info.xml
@@ -26,7 +26,7 @@
             android:layout_marginBottom="12dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textColor="#000000"
             android:gravity="center" />
         <View
