--- a/app/src/main/res/layout/view_contract_status1.xml
+++ b/app/src/main/res/layout/view_contract_status1.xml
@@ -25,10 +25,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="12dp"
-            android:textSize="13sp"
+            android:textSize="13dp"
             android:textColor="#4747c3"
             android:letterSpacing="-0.03"
-            android:lineSpacingExtra="5sp"
+            android:lineSpacingExtra="5dp"
             android:gravity="center_horizontal"
             android:text="계약"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
