--- a/app/src/main/res/layout/view_searchtext.xml
+++ b/app/src/main/res/layout/view_searchtext.xml
@@ -15,6 +15,6 @@
         android:padding="2dp"
         android:background="#f2f2f2"
         android:text="가"
-        android:textSize="14sp"
+        android:textSize="14dp"
         android:textColor="#666666"/>
 </LinearLayout>
