--- a/app/src/main/res/layout/view_toolbar.xml
+++ b/app/src/main/res/layout/view_toolbar.xml
@@ -31,7 +31,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginRight="80dp"
             android:layout_centerVertical="true"
-            android:textSize="19sp"
+            android:textSize="19dp"
             android:textStyle="bold"
             android:textColor="#000826"
             android:text="마이페이지"
@@ -71,10 +71,10 @@
             android:layout_marginRight="35dp"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textColor="#ffffff"
             android:letterSpacing="-0.03"
-            android:lineSpacingExtra="4sp"
+            android:lineSpacingExtra="4dp"
             android:text="0"/>
     </RelativeLayout>
 
